cambiado los DTO por recorts